--- a/old-releases/cookies-bar-v.1.2/css/cookies-bar.sass/_cookies-bar.scss
+++ b/old-releases/cookies-bar-v.1.2/css/cookies-bar.sass/_cookies-bar.scss
@@ -1,4 +1,5 @@
 #cookies-bar {
+	top: 0;
 	left: 0;
 	width: 100%;
 	overflow: hidden;
